--- a/react-src-blog/package.json
+++ b/react-src-blog/package.json
@@ -25,6 +25,7 @@
     "babel-preset-react": "~6.11.1",
     "babel-preset-stage-0": "~6.5.0",
     "babel-register": "~6.9.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "~0.23.1",
     "eslint": "~3.3.1",
     "eslint-config-airbnb": "~10.0.1",
@@ -34,7 +35,6 @@
     "eslint-plugin-react": "~6.1.1",
     "file-loader": "~0.9.0",
     "ghooks": "^1.3.2",
-    "history": "^5.0.0",
     "http-proxy": "~1.14.0",
     "jsdom": "~9.4.1",
     "jshint": "^2.9.4",
@@ -46,7 +46,6 @@
     "react-addons-test-utils": "~15.2.1",
     "react-hot-loader": "~1.3.0",
     "redux-ava": "~2.1.0",
-    "request": "^2.88.2",
     "sinon": "~1.17.4",
     "style-loader": "~0.13.1",
     "url-loader": "~0.5.7",
